# api

./: .gitignore  CMakeLists-GlowFlyApiArduino.txt  CMakeLists-SyncBlinkApiArduino.txt  CMakeLists-ixWebsocket.txt  CMakeLists-rtAudio.txt  CMakeLists-zLib.txt  CMakeLists.txt  CmakeLists-kissfft.txt  README.md
.github/workflows/: ci.yaml  push.yaml
bindings/: GlowFlyApi.cs  SyncBlinkApi.cs
src/: frequency_analyzer.cpp  frequency_analyzer.hpp  glowfly_api.cpp  glowfly_api.hpp  syncblink_api.cpp  syncblink_api.hpp  tcp_client.cpp  tcp_client.hpp  websocket.cpp  websocket.hpp
